<resources>
    <string name="app_name">Ejercicios Awakelab</string>
    <string name="name">Name</string>

    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="primer_numero">Primer Numero</string>
    <string name="segundo_numero">Segundo Numero</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="desarrollado_por_leocode">Desarrollado por LeoCode</string>


</resources>